@@ -19,6 +19,9 @@
 <p>
 <input type="radio" id="iszord" name="wherefore" value="zord">
 <label for="iszord">Zord</label>
+<p>
+<input type="radio" id="iszilence" name="wherefore" value="zilence">
+<label for="iszilence">Zilence</label>
 <p><br><input tabindex=1 type="submit" name="zonk" value="zonk!">
 </form>
 </div>
